# aos-designer

./: .gitignore  .gitmodules  Application.cpp  Application.hpp  CMakeLists.txt  LICENSE.txt  Paths.cpp  README.md  application.cpp  application.hpp  main.cpp  paths.cpp
aos-designer/: CMakeLists.txt  README.md
aos-designer/docs/: CODE_ORGANISATION.asciidoc
aos-designer/frontend-qt/: CMakeLists.txt
aos-designer/script/: post_build.py
aosdesigner/: CMakeLists.txt
aosdesigner/sources/: application.cpp  application.hpp
aosl/: CMakeLists.txt  LICENSE.md  README.md  aosl.xsd
aosl-cpp/: CMakeLists.txt  LICENSE.md  README.md
aosl-cpp/CMake/: FindXSD.cmake  FindXercesC.cmake
aosl-cpp/script/: generate_cpp.cfg  generate_cpp.py  generated_header_prologue.txt  generated_source_prologue.txt  readme.txt
aosl-cpp/source/: canvasstate.cpp  common.cpp  navigationstate.cpp  sequenceinterpreter.cpp  storypath.cpp
aosl-cpp/test/: CMakeLists.txt  test.cpp
backend/: CMakeLists.txt  context.cpp  editionsession.cpp  editionsessionid.cpp  library.cpp  library.hpp  sequence.hpp  sequenceinfos.hpp
backend/include/aosdesigner/backend/: api.hpp  async.hpp  context.hpp  editionsession.hpp  editionsessionid.hpp  editionsessioninfos.hpp  editor.hpp  editorinfo.hpp  event.hpp  eventdispatcher.hpp  id.hpp  library.hpp  libraryinfo.hpp  paths.hpp  project.hpp  projectinfo.hpp  projectinfos.hpp  resource.hpp  resourcefactory.hpp  resourceinfo.hpp  resourceprovider.hpp  resourceptr.hpp  resourceref.hpp  sequence.hpp  sequenceid.hpp  sequenceinfo.hpp  sequenceinfos.hpp  taskexecutor.hpp  uri.hpp  workqueue.hpp  workspace.hpp  workspaceobject.hpp
backend/include/aosdesigner/backend/events/: editorevents.hpp  libraryevents.hpp  projectevents.hpp  sequenceevents.hpp
backend/include/aosdesigner/backend/info/: editorinfo.hpp  libraryinfo.hpp  sequenceinfo.hpp
backend/include/aosdesigner/backend/resource/: resource.hpp  resourceprovider.hpp  resourceref.hpp
backend/include/aosdesigner/backend/tools/: async.hpp  eventdispatcher.hpp  taskexecutor.hpp  workqueue.hpp
backend/resources/: resource.hpp  resourcefactory.hpp  resourceinfo.hpp  resourceprovider.hpp
backend/source/: context.cpp  editionsession.cpp  editionsessionid.cpp  editor.cpp  id.cpp  library.cpp  paths.cpp  project.cpp  resource.cpp  resourcefactory.cpp  resourceprovider.cpp  sequence.cpp  workspace.cpp  workspaceinternalapi.hpp
backend/source/resource/: resource.cpp  resourceprovider.cpp
backend/test/: CMakeLists.txt  dataprovider.hpp  editor.cpp  eventdispatcher.cpp  id.cpp  project.cpp  sequence.cpp  workqueue.cpp  workspace.cpp  workspaceobject.cpp
core/: Context.cpp  Context.hpp  EditionSession.cpp  EditionSession.hpp  EditionSessionId.cpp  EditionSessionId.hpp  Library.cpp  Library.hpp  Project.cpp  Project.hpp  Sequence.cpp  Sequence.hpp  SequenceId.hpp  context.hpp  editionsession.hpp  library.cpp  project.cpp  project.hpp  projectinfos.hpp  sequence.cpp  sequence.hpp
core/resources/: Resource.cpp  ResourceFactory.cpp  ResourceFactory.hpp  ResourceProvider.cpp  ResourceProvider.hpp  ResourceRef.hpp  URI.hpp  resource.cpp  resourcefactory.cpp  resourceprovider.cpp  resourceptr.hpp
dependencies/: CMakeLists.txt
docs/: AOS_DESIGNER_VISION.asciidoc  CODE_ORGANISATION.asciidoc  aosd-code-organization.asciidoc  aosd-use-cases.asciidoc  aosd-vision-guidelines.asciidoc  use-cases.graphml
documentation/: aosd-code-organization.asciidoc  aosd-vision-guidelines.asciidoc
documentation/html/: aosd-code-organization.html  aosd-vision-guidelines.html
frontend-qt/: CMakeLists.txt  applicationview.hpp  designeractions.cpp  mainwindow.cpp  projectview.cpp
frontend-qt/dialog/: neweditionsessiondialog.hpp  newprojectdialog.cpp  newsequencedialog.cpp
frontend-qt/editor/: editormanager.hpp
frontend-qt/editor/canvas/: canvasgraphicsview.hpp
frontend-qt/model/: lastchangesmodel.cpp  modelviewbinder.cpp
frontend-qt/source/: changesview.cpp  changesview.hpp  designeractions.cpp  dialogs.cpp  dialogs.hpp  editiontoolview.cpp  editiontoolview.hpp  freewindow.cpp  freewindowmanager.hpp  layersview.cpp  layersview.hpp  librariesview.cpp  librariesview.hpp  logview.cpp  mainwindow.cpp  mainwindow.hpp  objectsview.cpp  objectsview.hpp  paths.cpp  paths.hpp  projectview.cpp  projectview.hpp  sequencelistview.cpp  sequencelistview.hpp  toolboxview.cpp  toolboxview.hpp
frontend-qt/source/dialog/: neweditionsessiondialog.hpp  newprojectdialog.hpp  newsequencedialog.hpp
frontend-qt/source/editor/: editor.cpp  editor.hpp  editormanager.cpp  editormanager.hpp
frontend-qt/source/editor/canvas/: canvasgraphicsview.cpp  canvasgraphicsview.hpp  canvasinvisibleobjectsview.cpp  canvasinvisibleobjectsview.hpp  canvasview.cpp  canvasview.hpp
frontend-qt/source/model/: canvasobjectsmodel.cpp  canvasobjectsmodel.hpp  librarymodel.cpp  librarymodel.hpp  modelviewbinder.hpp
frontend-qt/ui/: NewSequenceDialog.ui  newprojectdialog.ui  welcomescreen.ui
utilcpp/: CMakeLists.txt  LICENSE.md  README.md
utilcpp/cmake/: cmakeconfig.cmake  cmakeutils.cmake  library_api.hpp.template  static_library_api.hpp.template  utilcpp_projects.cmake
utilcpp/include/utilcpp/: assert.hpp  hardconfig.hpp  log.hpp  make_unique.hpp  moduleapi.hpp  move_on_copy.hpp  platforminfo.hpp
utilcpp/sources/: log.cpp
utilcpp/test/: CMakeLists.txt
view/: ApplicationView.cpp  ChangesView.cpp  ChangesView.hpp  DesignerActions.cpp  DesignerActions.hpp  Dialogs.cpp  Dialogs.hpp  EditionToolView.cpp  EditionToolView.hpp  FreeWindow.cpp  FreeWindow.hpp  FreeWindowManager.cpp  FreeWindowManager.hpp  LayersView.cpp  LayersView.hpp  LibrariesView.cpp  LibrariesView.hpp  LogView.cpp  LogView.hpp  MainWindow.cpp  MainWindow.hpp  ObjectsView.cpp  ObjectsView.hpp  ProjectView.cpp  ProjectView.hpp  SequenceListView.cpp  ToolboxView.cpp  ToolboxView.hpp  applicationview.cpp  changesview.cpp  changesview.hpp  dialogs.cpp  dialogs.hpp  editiontoolview.cpp  freewindowmanager.cpp  freewindowmanager.hpp  layersview.cpp  layersview.hpp  librariesview.cpp  logview.hpp  (+5 more)
(+496 files in other folders)
